# SO-100-arm_

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  controllers_5dof.yaml  controllers_7dof.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  so_100_arm.ros2_control.xacro  so_100_arm.srdf  so_100_arm.urdf.xacro  urdf.rviz
launch/: demo.launch.py  display.launch.py  gazebo.launch.py  gz.launch.py  hardware.launch.py  warehouse_db.launch.py
models/so_100_arm_7dof/: model.config
urdf/: so_100_arm.urdf  so_100_arm_5dof.urdf  so_100_arm_5dof_hardware.urdf  so_100_arm_7dof.csv  so_100_arm_7dof.urdf
