<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_100_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for so-100-7dof-arm</p>
    <p>This package contains configuration data, 3D models and launch files for so-100-7dof-arm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <build_depend>ament_cmake</build_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gz_ros</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>forward_command_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>